# decoder-forge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
decoder_forge/: __init__.py  associated_ops_repo.py  associated_struct_repo.py  bit_pattern.py  bit_utils.py  generate_code.py  i_template_engine.py  main.py  pattern.py  pattern_algorithms.py  print_tree.py  transpiller.py  uc_decode.py  uc_generate_code.py  uc_show_decode_tree.py
decoder_forge/templates/: python_decoder.py.jinja
docs/: conf.py  index.rst
formats/: armv7-m.json  armv7-m.yaml  test-fmt.json
src/: uc_create_decoder.py
src/bit_match_gen/: __init__.py  i_printer.py  main.py  pattern.py  pattern_algorithms.py  uc_show_decode_tree.py
src/bit_match_gen/patricia/: patricia.py
tests/: test_patricia.py  test_pattern.py  test_pattern_algorithms.py  test_uc_create_decoder.py
tests/data/formats/: test-format.yaml
tests/integration/: test_bit_pattern.py  test_pattern.py  test_transpiller.py  test_uc_generate_code.py
tests/integration_tests/: test_uc_generate_code.py
tests/system/: test_decoder_forge.py
tests/unit/: test_associated_struct_repo.py  test_bit_pattern.py  test_pattern.py  test_pattern_algorithms.py
tests/unit_tests/: test_pattern.py  test_pattern_algorithms.py
