[project]
name = "bit-match-gen"          
version = "0.1.0"               
description = "A Python tool that generates efficient C++ bit pattern matching algorithms from a simple JSON configuration file."
authors = [
    {name = "Christian Gröling", email = "contact@christiangroeling.de"}
]

license = "MIT"                 
readme = "README.md"            

[project.scripts]
bit-match-gen = "bit_match_gen:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
