[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "decoder-forge"          
version = "0.1.0"               
description = "A Python tool that generates efficient C++ bit pattern matching algorithms from a simple JSON configuration file."
authors = [
    {name = "Christian Gröling", email = "contact@christiangroeling.de"}
]
requires-python = ">=3.11"
license = "MIT"                 
readme = "README.md"            

[project.scripts]
decoder-forge = "decoder_forge:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[tool.poetry.dependencies]
click = "^8.1.8"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
jinja2 = "^3.1.6"
